--- a/public/details.html
+++ b/public/details.html
@@ -2,19 +2,22 @@
 <html>
     <head>
         <title>Details Page</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
-        <form class="UpadateNote">
-            <input type="text" id="id" hidden class="id">
-            <input type="text" id="title" class="title">
-            <br>
-            <textarea type="text" id="body" class="body"></textarea><br>
-            <input type="submit" value="Update Note">
-        </form>
+        <div class="container">
+            <h1>Upadte Note From</h1>
+            <form class="UpdateNote">
+                <input type="text" id="id" hidden class="id">
+                <input type="text" id="title" class="title">
+                <br>
+                <textarea type="text" id="body" class="body"></textarea><br>
+                <input type="submit" value="Update Note"><br>
+                <a href="/" class="btn btn-warning">Home Page</a>
+            </form>
+        </div>  
+        <script src="//cdn.jsdelivr.net/combine/npm/jquery@3.2.1,npm/axios@0.17.0/dist/axios.min.js"></script>
+        <script src="/js/details.js"></script>
     </body>
-    <script src="https://cdn.jsdelivr.net/combine/npm/jquery@3.2.1,npm/axios@0.17.0/dist/axios.min.js"></script>
-    <script src="/public/js/details.js"></script>
 </html>
