--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-2"></div>
-                <div class="col-8"></div>
+                <div class="col-8">
                 <form class="CreateNote">
                     <h1>Create a new Note</h1>
                     <div class="col-12">
@@ -37,8 +37,9 @@
                 </div>
             </div>
             <div class="col-2"></div>
+            </div>
         </div>
-    </body> 
     <script src="https://cdn.jsdelivr.net/combine/npm/jquery@3.2.1,npm/axios@0.17.0/dist/axios.min.js"></script>
-    <script src="/public/app.js"></script> 
+    <script src="/app.js"></script> 
+</body> 
 </html>
